# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("screenlock_mgr_service_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]

  cflags_cc = []
}

ohos_shared_library("screenlock_server") {
  sources = [
    "src/command.cpp",
    "src/dump_helper.cpp",
    "src/screenlock_get_info_callback.cpp",
    "src/screenlock_manager_stub.cpp",
    "src/screenlock_system_ability.cpp",
    "src/screenlock_system_ability_proxy.cpp",
  ]

  public_configs = [
    "//commonlibrary/c_utils/base:utils_config",
    ":screenlock_mgr_service_config",
  ]
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "//base/telephony/core_service/utils/log/include",
    "//base/telephony/core_service/interfaces/innerkits/include",
    "//base/theme/screenlock_mgr/frameworks/kitsimpl/include",
    "//base/user_idm/interfaces/innerkits/include",
    "//third_party/json/include",
    "//base/theme/screenlock_mgr/utils/include",
  ]
  deps = [ "//base/theme/screenlock_mgr/utils:screenlock_utils" ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "user_auth_framework:userauth_client",
    "window_manager:libdm",
    "bundle_framework:appexecfwk_core",
  ]
  subsystem_name = "theme"
  part_name = "screenlock_mgr"
}
