# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../screenlock.gni")

config("screenlock_mgr_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${screenlock_mgr_path}/frameworks/native/include",
    "${screenlock_mgr_path}/interfaces/inner_api/include",
  ]
}

ohos_shared_library("screenlock_server") {
  if (factory == true) {
    cflags_cc = [ "-DCONFIG_FACTORY_MODE" ]
  }

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = false
    boundary_sanitize = false
    cfi_vcall_icall_only = true
    ubsan = false
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "src/command.cpp",
    "src/commeventsubscriber.cpp",
    "src/dump_helper.cpp",
    "src/innerlistenermanager.cpp",
    "src/preferences_util.cpp",
    "src/screenlock_callback_proxy.cpp",
    "src/screenlock_get_info_callback.cpp",
    "src/screenlock_inner_listener_proxy.cpp",
    "src/screenlock_manager_stub.cpp",
    "src/screenlock_system_ability.cpp",
    "src/screenlock_system_ability_proxy.cpp",
    "src/strongauthmanager.cpp",
  ]

  public_configs = [ ":screenlock_mgr_service_config" ]

  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
    "-fno-merge-all-constants",
  ]

  cflags_cc = [
     "-fvisibility-inlines-hidden",
     "-fvisibility=hidden",
     "-fno-asynchronous-unwind-tables",
     "-fno-unwind-tables",
  ]

  shlib_type = "sa"

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbeget_proxy",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "time_service:time_client",
    "user_auth_framework:userauth_client",
    "window_manager:libdm",
    "window_manager:libwm",
  ]

  if (screenlock_mgr_so_crop == true) {
    cflags += [ "-DIS_SO_CROP_H" ]
  }

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "theme"
  part_name = "screenlock_mgr"
}

ohos_static_library("screenlock_server_static") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    boundary_sanitize = true
    ubsan = true
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "src/command.cpp",
    "src/commeventsubscriber.cpp",
    "src/dump_helper.cpp",
    "src/innerlistenermanager.cpp",
    "src/preferences_util.cpp",
    "src/screenlock_callback_proxy.cpp",
    "src/screenlock_get_info_callback.cpp",
    "src/screenlock_inner_listener_proxy.cpp",
    "src/screenlock_manager_stub.cpp",
    "src/screenlock_system_ability.cpp",
    "src/screenlock_system_ability_proxy.cpp",
    "src/strongauthmanager.cpp",
  ]

  public_configs = [ ":screenlock_mgr_service_config" ]

  include_dirs = [
    "${screenlock_mgr_path}/frameworks/native/include",
    "${screenlock_mgr_path}/utils/include",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbeget_proxy",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "time_service:time_client",
    "user_auth_framework:userauth_client",
    "window_manager:libdm",
    "window_manager:libwm",
  ]

  if (screenlock_mgr_so_crop == true) {
    cflags = [ "-DIS_SO_CROP_H" ]
  }

  subsystem_name = "theme"
  part_name = "screenlock_mgr"
}
