# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("screenlock_utils_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//utils/native/base/include",
  ]

  cflags_cc = [ "-fexceptions" ]
}
ohos_shared_library("screenlock_utils") {
  sources = [
    "src/screenlock_bundlename.cpp",
  ]

  public_configs = [
    ":screenlock_utils_config",
  ]

  include_dirs = [
    "//utils/native/base/include",
  ]
  
  deps = [
    "//utils/native/base:utils",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
  ]
  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ipc:ipc_core",
    "hiviewdfx_hilog_native:libhilog",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_services",
  ]
  relative_install_dir = "module"
  subsystem_name = "miscservices"
  part_name = "screenlock"
}
