# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("screenlock_utils_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//commonlibrary/c_utils/base/include",
  ]

  cflags_cc = []
}
ohos_shared_library("screenlock_utils") {
  if (is_standard_system) {
    sources = [ "src/screenlock_appinfo.cpp" ]

    public_configs = [ ":screenlock_utils_config" ]

    include_dirs = [ "//commonlibrary/c_utils/base/include" ]

    external_deps = [
      "access_token:libaccesstoken_sdk",
      "hiviewdfx_hilog_native:libhilog",
    ]
    subsystem_name = "theme"
    part_name = "screenlock_mgr"
  }
}
