# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# miscservices under the License is miscservices on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("../../../screenlock.gni")

config("screenlock_mgr_frameworks_ets_ani_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]

  cflags_cc = []
}

ohos_shared_library("screenlock_ani") {
  if (is_standard_system) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      boundary_sanitize = true
      ubsan = true
    }
    branch_protector_ret = "pac_ret"
    
    version_script = "screenlock_ani.versionscript"

    include_dirs = [ 
      "${screenlock_mgr_path}/services/include" 
    ]

    public_configs = [ ":screenlock_mgr_frameworks_ets_ani_config" ]

    sources = [
      "src/ani_screenlock_ability.cpp",
      "src/ani_screenlock_callback.cpp",
      "src/ani_screenlock_system_ability_callback.cpp"
    ]

    deps = [
      "${screenlock_mgr_path}/interfaces/inner_api:screenlock_client_static",
    ]

    external_deps = [
      "c_utils:utils",
      "eventhandler:libeventhandler",
      "hilog:libhilog",
      "hitrace:hitrace_meter",
      "ipc:ipc_single",
      "runtime_core:ani",
      "runtime_core:libarkruntime",
    ]

    relative_install_dir = "module"
    subsystem_name = "theme"
    part_name = "screenlock_mgr"
  }
}

generate_static_abc("screenLock_static") {
    if (is_standard_system) {
      base_url = "./ets"
      files = [
          "./ets/@ohos.screenLock.ets",
      ]
      is_boot_abc = "True"
      device_dst_file = "/system/framework/screenLock_static.abc"
    }
}

ohos_prebuilt_etc("screenLock_static_etc") {
    source = "$target_out_dir/screenLock_static.abc"
    module_install_dir = "framework"
    subsystem_name = "theme"
    part_name = "screenlock_mgr"
    deps = [":screenLock_static"]
}
